# project-kisan

./: .gitignore  TODO.md  app.py  eda.ipynb  kisan_agent.py  pyproject.toml
mods/: ask-govt-schemes.py  build_index.py  disease_detector.py  query_index.py  schemes.py
mods/tools/: agro_disease_analyser.py  agro_market_analyser.py  agro_scheme_analyser.py  tool_types.py
