[project]
name = "farmer-gpt"
version = "0.1.0"
description = "LLM driven assistant for farmers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.1",
    "openai>=2.6.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "weaviate-client>=4.17.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mods*"]

[tool.setuptools.package-data]
"*" = ["assets/**/*"]
